--- a/po/nl.po
+++ b/po/nl.po
@@ -1,7 +1,7 @@
 # translation of Geany to Dutch
 # This file is distributed under the same license as the GEANY package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-# Peter Scholtens <peter.scholtens@xs4all.nl>, 2009 - 2012, 2014
+# Peter Scholtens <peter.scholtens@xs4all.nl>, 2009 - 2012, 2014 - 2015
 # Ayke van Laëthem <aykevanlaethem@gmail.com>, 2009, 2010
 # Kurt De Bree <kdebree@telenet.be>, 2006.
 msgid ""
@@ -386,7 +386,7 @@ msgstr "<b>Projecten</b>"
 
 #: ../data/geany.glade.h:75 ../src/dialogs.c:231
 msgid "Miscellaneous"
-msgstr "_Overige"
+msgstr "Overige"
 
 #. TODO Find a better way to map the current notebook page to the
 #. * corresponding chapter in the documentation, comparing translatable
@@ -1254,7 +1254,7 @@ msgstr "Browser:"
 msgid ""
 "A terminal emulator command (%c is substituted with the Geany run script "
 "filename)"
-msgstr ""
+msgstr "Een terminalemulatorcommando (%c wordt vervangen door het Geany runscript bestandsnaam)"
 
 #: ../data/geany.glade.h:258
 msgid "Path (and possibly additional arguments) to your favorite browser"
@@ -1583,10 +1583,9 @@ msgid "Follow path of the current file"
 msgstr "Pad van het huidige bestand volgen"
 
 #: ../data/geany.glade.h:328
-#, fuzzy
 msgid "Whether to execute \"cd $path\" when you switch between opened files"
 msgstr ""
-"Of \"cd $path\" moet worden uitgevoerd als u tussen geopende bestanden "
+"Of \"cd $path\" moet worden uitgevoerd als u tussen reeds geopende bestanden "
 "wisselt"
 
 #: ../data/geany.glade.h:329
@@ -1966,18 +1965,16 @@ msgid "Set Line E_ndings"
 msgstr "Regel_einden instellen"
 
 #: ../data/geany.glade.h:421
-#, fuzzy
 msgid "Convert and Set to _CR/LF (Windows)"
-msgstr "Converteren en instellen op CR/LF (_Win)"
+msgstr "Omzetten naar en instellen op CR/LF (_Win)"
 
 #: ../data/geany.glade.h:422
 msgid "Convert and Set to _LF (Unix)"
-msgstr "Converteren en instellen op LF (_Unix)"
+msgstr "Omzetten naar en instellen op LF (_Unix)"
 
 #: ../data/geany.glade.h:423
-#, fuzzy
 msgid "Convert and Set to CR (Classic _Mac)"
-msgstr "Converteren en instellen op CR (_Mac)"
+msgstr "Omzetten naar en instellen op CR (_Mac)"
 
 #: ../data/geany.glade.h:424 ../src/keybindings.c:645
 msgid "_Clone"
@@ -2082,7 +2079,7 @@ msgstr "_Website"
 
 #: ../data/geany.glade.h:449
 msgid "Wi_ki"
-msgstr ""
+msgstr "Wi_ki"
 
 #: ../data/geany.glade.h:450
 msgid "Report a _Bug..."
@@ -2244,7 +2241,13 @@ msgid ""
 "Enrico Tröger\n"
 "Frank Lanitz\n"
 "All rights reserved."
-msgstr ""
+msgstr "Auteursrecht (c) 2005-2015\n"
+"Colomban Wendling\n"
+"Nick Treleaven\n"
+"Matthew Brush\n"
+"Enrico Tröger\n"
+"Frank Lanitz\n"
+"Alle rechten voorbehouden."
 
 #: ../src/about.c:168
 msgid "About Geany"
@@ -2337,9 +2340,8 @@ msgid "Process failed (%s)"
 msgstr "Proces mislukt (%s)"
 
 #: ../src/build.c:813
-#, fuzzy, c-format
 msgid "Invalid working directory \"%s\""
-msgstr "Kon werkmap niet veranderen naar %s"
+msgstr "Kan werkmap niet veranderen naar '%s'"
 
 #: ../src/build.c:838
 #, c-format
@@ -2351,15 +2353,15 @@ msgstr ""
 msgid ""
 "File not executed because the terminal may contain some input (press Ctrl+C "
 "or Enter to clear it)."
-msgstr ""
+msgstr "Bestand niet uitgevoerd omdat de terminal wellicht invoer bevat (druk "
+"Ctrl+C of Enter om op te schonen."
 
 #: ../src/build.c:912
-#, fuzzy, c-format
 msgid ""
 "Cannot execute terminal command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Kon hulpprogramma grep '%s' niet uitvoeren; controleer de padinstelling in "
+"Kan terminalprogramma '%s' niet uitvoeren: %s; controleer de padinstelling in "
 "Voorkeuren."
 
 #: ../src/build.c:1020
@@ -2471,12 +2473,11 @@ msgid "Execute commands"
 msgstr "Commando's Uitvoeren"
 
 #: ../src/build.c:2009
-#, fuzzy
 msgid ""
 "%d, %e, %f, %p, %l are substituted in command and directory fields, see "
 "manual for details."
 msgstr ""
-"%d, %e, %f, %p worden vervangen in de commando en directory velden, zie "
+"%d, %e, %f, %p, %l worden vervangen in de commando- en directoryvelden, zie de "
 "handleiding voor details."
 
 #: ../src/build.c:2167
@@ -2543,20 +2544,16 @@ msgstr "Kon bestand %s niet openen (Niet gevonden)"
 
 #: ../src/callbacks.c:1473
 msgid "Check the path setting in Filetype configuration."
-msgstr ""
+msgstr "Controleer de padinstelling bij Bestandstype Configuratie."
 
 #: ../src/callbacks.c:1478
-#, fuzzy
 msgid "Check the path setting in Preferences."
-msgstr ""
-"Kon hulpprogramma grep '%s' niet uitvoeren; controleer de padinstelling in "
-"Voorkeuren."
+msgstr "Controleer padinstellingen bij Voorkeuren."
 
 #. G_SHELL_ERROR is parsing error, it may be caused by %s word with quotes
 #: ../src/callbacks.c:1491
-#, fuzzy, c-format
 msgid "Cannot execute context action command \"%s\": %s. %s"
-msgstr "Kon extern geconfigureerd commando '%s' niet uitvoeren (%s)."
+msgstr "Kan situatie specifieke commando '%s' niet uitvoeren (%s. %s)."
 
 #: ../src/dialogs.c:160 ../src/document.c:2308 ../src/document.c:2373
 #: ../src/document.c:2381
@@ -2808,7 +2805,7 @@ msgstr ", alleen lezen"
 
 #: ../src/document.c:1627
 msgid "Discard history"
-msgstr ""
+msgstr "Verwijder geschiedenis"
 
 #: ../src/document.c:1628
 msgid ""
@@ -2816,12 +2813,14 @@ msgid ""
 "it. You can disable this by discarding the history upon reload. This message "
 "will not be displayed again but Your choice can be changed in the various "
 "preferences."
-msgstr ""
+msgstr "De vorige toestand van de buffer is opgeslagen in de geschiedenis en "
+"Ongedaan Maken haalt deze terug. Je kunt dit uitschakelen door de geschiedenis "
+"bij herladen uit te zetten. Deze mededeling zal niet opnieuw worden weegegeven "
+"maar je keuze kan gewijzigd worden in de diverse voorkeuren."
 
 #: ../src/document.c:1632
-#, fuzzy
 msgid "The file has been reloaded."
-msgstr "Het bestand is gesloten."
+msgstr "Het bestand is herladen."
 
 #: ../src/document.c:1662
 msgid "Any unsaved changes will be lost."
@@ -2846,7 +2845,7 @@ msgid ""
 "An error occurred while converting the file from UTF-8 in \"%s\". The file "
 "remains unsaved."
 msgstr ""
-"Er deed zich een fout voor tijdens het converteren van het bestand van UTF-8 "
+"Er deed zich een fout voor tijdens het omzetten van het bestand van UTF-8 "
 "in \"%s\". Het bestand blijft onopgeslagen."
 
 #: ../src/document.c:1912
@@ -3930,9 +3929,8 @@ msgid "Switch to Document"
 msgstr "Schakel naar document"
 
 #: ../src/notebook.c:451
-#, fuzzy
 msgid "Open in New _Window"
-msgstr "Open met _Geany"
+msgstr "Open in nieuw venster"
 
 #: ../src/plugins.c:223
 #, c-format
@@ -3953,6 +3951,9 @@ msgid ""
 "<i>Other plugins depend on this. Disable them first to allow deactivation.</"
 "i>\n"
 msgstr ""
+"\n"
+"<i>Andere plug-ins zijn hiervan afhankelijk. Schakel die eerst uit.</"
+"i>\n"
 
 #. Four allocations is less than ideal but meh
 #: ../src/plugins.c:1602
@@ -3962,6 +3963,9 @@ msgid ""
 "Author(s):\t%s\n"
 "Filename:\t%s"
 msgstr ""
+"Versie:\t%s\n"
+"Auteur(s):\t%s\n"
+"Bestandsnaam:\t%s"
 
 #: ../src/plugins.c:1630
 msgid "No plugins available."
@@ -4122,12 +4126,11 @@ msgstr ""
 "%s"
 
 #: ../src/printing.c:615
-#, fuzzy, c-format
 msgid ""
 "Cannot execute print command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Kon hulpprogramma grep '%s' niet uitvoeren; controleer de padinstelling in "
+"Kan afdrukprogramma '%s' niet uitvoeren: %s; controleer de padinstelling in "
 "Voorkeuren."
 
 #: ../src/printing.c:622
@@ -4162,7 +4165,8 @@ msgstr "Projectnaam"
 msgid ""
 "Path of the file representing the project and storing its settings. It "
 "should normally have the \"%s\" extension."
-msgstr ""
+msgstr "Pad naar het bestand dat het project representeerd and instellingen bewaard. "
+"Het heeft normaliter de '%s' extensie."
 
 #: ../src/project.c:212 ../src/project.c:484
 msgid "Choose Project Base Path"
@@ -4476,11 +4480,10 @@ msgid "%s %s -- %s (in directory: %s)"
 msgstr "%s %s -- %s (in map: %s)"
 
 #: ../src/search.c:1718
-#, fuzzy, c-format
 msgid ""
 "Cannot execute grep tool \"%s\": %s. Check the path setting in Preferences."
 msgstr ""
-"Kon hulpprogramma grep '%s' niet uitvoeren; controleer de padinstelling in "
+"Kan hulpprogramma grep '%s' niet uitvoeren: %s; controleer de padinstelling in "
 "Voorkeuren."
 
 #: ../src/search.c:1758
@@ -4521,30 +4524,28 @@ msgstr ""
 
 #: ../src/spawn.c:90 ../src/spawn.c:140 ../src/spawn.c:184
 msgid "Text ended before matching quote was found"
-msgstr ""
+msgstr "Tekst hield op voordat overeenkomstige quote gevonden was."
 
 #. TL note: from glib
 #: ../src/spawn.c:126
 msgid "Text was empty (or contained only whitespace)"
-msgstr ""
+msgstr "Tekst was leeg (of bevatte alleen lege regels)"
 
 #: ../src/spawn.c:147 ../src/spawn.c:161
 msgid "A quoted Windows program name must be entirely inside the quotes"
-msgstr ""
+msgstr "Plaats geciteerd Windows programma geheel binnen de aanhalingstekens"
 
 #: ../src/spawn.c:254
-#, fuzzy
 msgid "Program not found"
-msgstr "Commando niet gevonden."
+msgstr "Programma niet gevonden."
 
 #: ../src/spawn.c:668
-#, fuzzy
 msgid "Failed to change to the working directory"
-msgstr "Handeling mislukt.  Geen werkmap beschikbaar."
+msgstr "Kan niet naar werkmap wijzigen."
 
 #: ../src/spawn.c:673
 msgid "Unknown error executing child process"
-msgstr ""
+msgstr "Onbekende fout stopt child process"
 
 #: ../src/stash.c:1150
 msgid "Name"
@@ -4653,19 +4654,19 @@ msgstr "Subsubsectie"
 
 #: ../src/symbols.c:693 ../src/symbols.c:718
 msgid "Structures"
-msgstr "Structures"
+msgstr "Structuren"
 
 #: ../src/symbols.c:700
 msgid "Parts"
-msgstr ""
+msgstr "Onderdelen"
 
 #: ../src/symbols.c:701
 msgid "Assembly"
-msgstr ""
+msgstr "Machinecode"
 
 #: ../src/symbols.c:702
 msgid "Steps"
-msgstr ""
+msgstr "Stappen"
 
 #: ../src/symbols.c:717 ../src/symbols.c:815 ../src/symbols.c:861
 msgid "Modules"
@@ -4673,7 +4674,7 @@ msgstr "Modulen"
 
 #: ../src/symbols.c:719 ../src/symbols.c:766
 msgid "Traits"
-msgstr ""
+msgstr "Kenmerken"
 
 #: ../src/symbols.c:720
 msgid "Implementations"
@@ -4925,7 +4926,7 @@ msgstr "Definitie van '%s' niet gevonden."
 
 #: ../src/symbols.c:2351
 msgid "Sort by _Name"
-msgstr "Sorteer op _Naam"
+msgstr "Sorteer op _naam"
 
 #: ../src/symbols.c:2358
 msgid "Sort by _Appearance"
@@ -4934,14 +4935,14 @@ msgstr "Sorteer op _plaats in document"
 #: ../src/templates.c:83
 #, c-format
 msgid "Failed to convert template file \"%s\" to UTF-8"
-msgstr "Conversie van sjabloon bestand \"%s\" naar UTF-8 mislukt"
+msgstr "Omzetting van sjabloon bestand '%s' naar UTF-8 mislukt"
 
 #: ../src/templates.c:620
 #, c-format
 msgid ""
 "Cannot execute command \"%s\" from the template: %s. Check the path in the "
 "template."
-msgstr ""
+msgstr "Kan commando '%s' van sjabloon '%s' niet uitvoeren. Controleer pad in sjabloon"
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:58
@@ -5121,17 +5122,16 @@ msgstr ""
 "beëindigingscode."
 
 #: ../src/tools.c:242
-#, fuzzy, c-format
 msgid ""
 "Cannot execute custom command \"%s\": %s. Check the path setting in Custom "
 "Commands."
 msgstr ""
-"Kon hulpprogramma grep '%s' niet uitvoeren; controleer de padinstelling in "
-"Voorkeuren."
+"Kon aangepaste commando '%s' niet uitvoeren; controleer de padinstelling in "
+"Aangepaste Commando's."
 
 #: ../src/tools.c:357 ../src/tools.c:620
 msgid "Set Custom Commands"
-msgstr "Aangepast commando instellen"
+msgstr "Aangepaste commando's instellen"
 
 #: ../src/tools.c:365
 msgid ""
@@ -5322,7 +5322,7 @@ msgstr ""
 #: ../src/ui_utils.c:747
 msgid "Date format string could not be converted (possibly too long)."
 msgstr ""
-"Datumformaatstring kon niet worden geconverteerd (waarschijnlijk te lang)."
+"Datumformaatstring kon niet omgezet worden (waarschijnlijk te lang)."
 
 #: ../src/ui_utils.c:822
 msgid "_Set Custom Date Format"
@@ -5337,9 +5337,8 @@ msgid "Select File"
 msgstr "Bestand selecteren"
 
 #: ../src/ui_utils.c:2152
-#, fuzzy
 msgid "_Filetype Configuration"
-msgstr "He_rlaad configuratie"
+msgstr "Bestandstype configuratie"
 
 #: ../src/ui_utils.c:2189
 msgid "Save All"
@@ -5366,14 +5365,12 @@ msgstr ""
 "commando."
 
 #: ../src/utils.c:375
-#, fuzzy
 msgid "Windows (CRLF)"
-msgstr "Win (CRLF)"
+msgstr "Windows (CRLF)"
 
 #: ../src/utils.c:376
-#, fuzzy
 msgid "Classic Mac (CR)"
-msgstr "Mac (CR)"
+msgstr "Klassieke Mac (CR)"
 
 #: ../src/utils.c:377
 msgid "Unix (LF)"
@@ -5381,15 +5378,15 @@ msgstr "Unix (LF)"
 
 #: ../src/utils.c:386
 msgid "CRLF"
-msgstr ""
+msgstr "CRLF"
 
 #: ../src/utils.c:387
 msgid "CR"
-msgstr ""
+msgstr "CR"
 
 #: ../src/utils.c:388
 msgid "LF"
-msgstr ""
+msgstr "LF"
 
 #: ../src/vte.c:489
 #, c-format
@@ -5412,7 +5409,8 @@ msgstr "_Invoermethoden"
 msgid ""
 "Directory not changed because the terminal may contain some input (press Ctrl"
 "+C or Enter to clear it)."
-msgstr ""
+msgstr "Map niet gewijzigd omdat de terminal wellicht invoer bevat (druk "
+"Ctrl+C of Enter om op te schonen."
 
 #: ../src/win32.c:211
 msgid "Geany project files"
